--- a/src/app/app-components/workspace-layout/workspace-layout.template.html
+++ b/src/app/app-components/workspace-layout/workspace-layout.template.html
@@ -6,7 +6,7 @@
       </sam-filters-container>
     </aside>
     <div [ngClass]="setMainWidth()">
-      <header class="usa-width-one-whole" id="focusTitle" tabindex="-1">
+      <header class="usa-width-one-whole" id="focusTitle" tabindex="-1" *ngIf="loadFlag">
         <h1>{{titleText}}</h1>
       </header>
       <div class="usa-grid-full">
@@ -28,11 +28,10 @@
       <ng-content select="[workspace-content]"></ng-content>
       <div *ngIf="loadFlag" class="usa-grid-full">
         <samPagination (pageChange)="pageChangeHandler($event)" [currentPage]="currentPage" [totalPages]="totalPages"></samPagination>
-      </div>
-      <div class="usa-grid-full" *ngIf="addBtnText">
-        <div class="usa-width-one-whole">
-          <!--Temporary fix of FALCreatePage navigation, should be removed later-->
-          <a href="/programs/add"><samButton buttonId="test" [buttonText]="addBtnText" (click)="addBtnClickHandler($event)"></samButton></a>
+        <div class="usa-grid-full" *ngIf="addBtnText">
+          <div class="usa-width-one-whole">
+            <samButton buttonId="test" [buttonText]="addBtnText" (click)="addBtnClickHandler($event)"></samButton>
+          </div>
         </div>
       </div>
     </div>
