--- a/src/app/workspace/workspace.template.html
+++ b/src/app/workspace/workspace.template.html
@@ -1,6 +1,6 @@
 <workspace-layout (pageChange)="pageChange($event-1)" [currentPage]="pageNum+1" [totalPages]="totalPages"
                   [totalElements]="totalCount" [loadFlag]="data.length > 0"
-                  titleText="Sam.gov Assistance Listings Workspace" [addBtnText]="addFALButtonText">
+                  titleText="Sam.gov Assistance Listings Workspace" [addBtnText]="addFALButtonText" (addBtnClick)="addBtnClick($event)">
   <div workspace-sidebar></div>
   <div workspace-content>
     <div *ngFor="let row of data" tabindex="0">
