change "grant" to "submit"

--- a/src/app/users/public/grant-access/grant-access.template.html
+++ b/src/app/users/public/grant-access/grant-access.template.html
@@ -30,7 +30,7 @@
     <p class="pull-right">
       <a [routerLink]="['../access']"><button class="usa-button usa-button-outline">Cancel</button></a>
       &nbsp;
-      <button id="grant-button" class="usa-button usa-button-primary" (click)="onGrantClick()">Grant</button>
+      <button id="grant-button" class="usa-button usa-button-primary" (click)="onGrantClick()">Submit</button>
     </p>
   </div>
 </div>
