--- a/src/app/search/search.template.html
+++ b/src/app/search/search.template.html
@@ -90,6 +90,7 @@
   <div class="usa-width-three-fourths">
     <div class="usa-width-one">
       <samAlert *ngIf="wdTypeModel" [type]="'info'" [showClose]="'true'" [title]="'Wage Determinations Search'" [description]="'The Wage Determination filter asks a series of questions to determine if a WDOL is available based on your selected criteria. <br/><br/>Please note that using the keyword search with these WD type-specific filters may limit your search results.<br/><br/> If you cannot locate a Wage Determination, try searching with no keywords and use the Wage Determination filters to find your result.'"></samAlert>
+      <samAlert *ngIf="wdConstructModel" [type]="'success'" [dismissTimer]="'5000'" [title]="'Wage Determinations Search'" [description]="'Search Criteria Complete'"></samAlert>
       <h1 class="m_T-0 p_T-6x">SAM.gov Search Results</h1>
     </div>
     <div class="usa-width-one">
