--- a/src/app/authentication/shared/kba/kba.component.html
+++ b/src/app/authentication/shared/kba/kba.component.html
@@ -1,6 +1,6 @@
 <div class="usa-kba">
   <div class="question">
-    <samSelect [name]="'sam-kba-question-'+states.uid"
+    <samSelect [name]="store.question.name"
                [(model)]="$question"
                [options]="$questions"
                [errorMessage]="states.errors.question"
@@ -11,7 +11,7 @@
   <div class="answer">
   <labelWrapper [errorMessage]="(answer.invalid ? states.errors.answer : '')" required="true">
       <input [type]="states.type"
-             [name]="'sam-kba-answer-'+states.uid"
+             [name]="store.answer.name"
              [formControl]="answer"
              (blur)="secureAnswer($event)"
              (focus)="selectAnswer($event)"
