- Updated checkbox toggle label to change based on state

--- a/src/app/authentication/shared/password/password.component.html
+++ b/src/app/authentication/shared/password/password.component.html
@@ -35,7 +35,7 @@
           </div>
           <p class="usa-form-note">
             <input type="checkbox" id="usa-password-toggle" (change)="states.toggle = !states.toggle">
-            <label for="usa-password-toggle">Toggle password</label>
+            <label for="usa-password-toggle">{{ states.toggle ? 'Hide' : 'Show' }} Password</label>
           </p>
         </div>
         <div class="usa-password-progress">
