--- a/src/app/app-components/workspace-layout/workspace-layout.template.html
+++ b/src/app/app-components/workspace-layout/workspace-layout.template.html
@@ -6,7 +6,7 @@
       </sam-filters-container>
     </aside>
     <div [ngClass]="setMainWidth()">
-      <header class="usa-width-one-whole" id="focusTitle" tabindex="-1" *ngIf="loadFlag">
+      <header class="usa-width-one-whole" tabindex="-1" *ngIf="loadFlag">
         <h1>{{titleText}}</h1>
       </header>
       <div class="usa-grid-full">
@@ -25,7 +25,7 @@
           </samSelect>
         </div>
       </div>
-      <ng-content select="[workspace-content]"></ng-content>
+      <ng-content select="[workspace-content]" class="worspace-content"></ng-content>
       <div *ngIf="loadFlag" class="usa-grid-full">
         <samPagination (pageChange)="pageChangeHandler($event)" [currentPage]="currentPage" [totalPages]="totalPages"></samPagination>
         <div class="usa-grid-full" *ngIf="addBtnText">
