--- a/src/app/workspace/workspace.template.html
+++ b/src/app/workspace/workspace.template.html
@@ -2,8 +2,8 @@
                   [totalElements]="totalCount" [loadFlag]="data.length > 0"
                   titleText="Sam.gov Assistance Listings Workspace" [addBtnText]="addFALButtonText" (addBtnClick)="addBtnClick($event)">
   <div workspace-sidebar></div>
-  <div workspace-content>
-    <div *ngFor="let row of data" tabindex="0">
+  <div workspace-content class="workspace-content">
+    <div *ngFor="let row of data" tabindex="-1">
       <assistance-program-result [data]="row" [qParams]="qParams"></assistance-program-result>
       <hr class="m_T-5x"/>
     </div>
