- Deactivate account verbiage updates for confirm modals

--- a/src/app/authentication/profile/details/details.component.html
+++ b/src/app/authentication/profile/details/details.component.html
@@ -119,6 +119,6 @@
           title="Warning"
           description="If you deactivate your account it cannot be reactivated for future use and you will be immediately logged out of the system. Are you sure you want to deactivate your account?"
           showClose="true"
-          submitButtonLabel="Yes, continue with edit"
-          cancelButtonLabel="No, cancel my edit"
+          submitButtonLabel="Yes, continue with deactivation"
+          cancelButtonLabel="No, cancel deactivation"
           (onSubmit)="deactivate()"></samModal>
