--- a/src/app/authentication/profile/details/details.component.html
+++ b/src/app/authentication/profile/details/details.component.html
@@ -1,7 +1,7 @@
-<samAlert class="usa-alert-static"
-          type="info"
-          title="Information Status"
-          description="If you have legacy accounts of the 10 systems, you can migrate your privileges"></samAlert>
+<samAlert type="info" class="usa-alert-static" title="Migrate Your Roles">
+  If you have a user account at any of the <a routerLink="/profile/migrations" fragment="legacy-sites">websites</a> that are moving to the new SAM.gov,
+  you may migrate your roles and keep your same permissions. <a routerLink="/profile/migrations" fragment="top">Begin Now</a>.
+</samAlert>
 
 <h2>Personal Details</h2>
 <div>
