Add simple unit tests

--- a/src/app/app-components/feedback-form/feedback-form.template.html
+++ b/src/app/app-components/feedback-form/feedback-form.template.html
@@ -37,7 +37,7 @@
 
       <!--TextBox Question-->
       <div class="feedback-question-textarea m_T-2x" *ngIf="isCurrentQType('text')">
-        <textarea class="usa-width-one-whole" name="text" rows="3" placeholder="Leave a comment" (change)="onTextAreaChange()" [(ngModel)]="textareaModel"></textarea>
+        <textarea class="usa-width-one-whole" name="text" rows="3" placeholder="Leave a comment" (change)="onTextAreaChange()" [(ngModel)]="textAreaModel"></textarea>
       </div>
 
       <!--Last Question-->
