add a title to grant access page

--- a/src/app/users/public/grant-access/grant-access.template.html
+++ b/src/app/users/public/grant-access/grant-access.template.html
@@ -1,4 +1,5 @@
 <div class="grant-access-page">
+  <h1 class="m_T-0">Request Accesses</h1>
   <agencyPicker
     id="form-top"
     [label]="'Organizations'"
