[SAM-490] Fix bug with revisionNumber being string

--- a/src/app/wage-determination/wage-determination.page.html
+++ b/src/app/wage-determination/wage-determination.page.html
@@ -61,8 +61,8 @@
                 <strong>Published Date: </strong>
               </ng-container>
               <ng-container *ngIf="!isSCA">
-                <strong *ngIf="revisionNumber && revisionNumber === 0">Published Date: </strong>
-                <strong *ngIf="revisionNumber && revisionNumber > 0">Last Revised Date: </strong>
+                <strong *ngIf="revisionNumber && revisionNumber === '0'">Published Date: </strong>
+                <strong *ngIf="revisionNumber && revisionNumber !== '0'">Last Revised Date: </strong>
               </ng-container>
               {{wageDetermination.publishDate | dateFormat: 'MMM DD, YYYY'}}
             </li>
