[SAM-489] Fix bug with revisionNumber being string

--- a/src/app/wage-determination/wage-determination.page.html
+++ b/src/app/wage-determination/wage-determination.page.html
@@ -59,12 +59,12 @@
             <li *ngIf = "wageDetermination.publishDate">
               <ng-container *ngIf="isSCA">
                 <strong>Published Date: </strong>
-                <strong *ngIf="revisionNumber && revisionNumber === 1">Published Date: </strong>
-                <strong *ngIf="revisionNumber && revisionNumber > 1">Last Revised Date: </strong>
+                <strong *ngIf="revisionNumber && revisionNumber === '1'">Published Date: </strong>
+                <strong *ngIf="revisionNumber && revisionNumber !== '1'">Last Revised Date: </strong>
               </ng-container>
               <ng-container *ngIf="!isSCA">
-                <strong *ngIf="revisionNumber && revisionNumber === 0">Published Date: </strong>
-                <strong *ngIf="revisionNumber && revisionNumber > 0">Last Revised Date: </strong>
+                <strong *ngIf="revisionNumber && revisionNumber === '0'">Published Date: </strong>
+                <strong *ngIf="revisionNumber && revisionNumber !== '0'">Last Revised Date: </strong>
               </ng-container>
               {{wageDetermination.publishDate | dateFormat: 'MMM DD, YYYY'}}
             </li>
