--- a/src/styles/pages/_access.scss
+++ b/src/styles/pages/_access.scss
@@ -3,6 +3,15 @@
    min-width: 250px;
   }
 
+  .dropdown-list {
+    overflow-y: auto;
+    max-height:400px;
+
+    input {
+      height: initial;
+    }
+  }
+
   .access-cell {
     color: black;
     padding: 10px 0;
