WIP feedback component enhancement

--- a/src/app/Help/help.template.html
+++ b/src/app/Help/help.template.html
@@ -83,6 +83,9 @@
             <li><a #additionalReference [ngClass]="getSubSectionClass('additionalReference')" (click)="changeSubSection('additionalReference',additionalReference)" href="{{currentUrl}}#additionalReference">Additional References</a></li>
           </ul>
         </li>
+        <li>
+          <sam-feedback></sam-feedback>
+        </li>
       </ul>
     </div>
   </aside>
