--- a/src/app/Reports/reports.template.html
+++ b/src/app/Reports/reports.template.html
@@ -3,9 +3,20 @@
     <div sam-sticky limit=1200 container="reports-content">
 <h3>Navigation</h3>
       <ul class="usa-sidenav-list">
-        <li><a [ngClass]="getSectionClass('overview')" (click)="changeSection('overview')" [routerLink]="['/reports/overview']">Dynamic Reports</a></li>
+        <li><a [ngClass]="getSectionClass('overview')" (click)="changeSection('overview')" [routerLink]="['/reports/overview']">Dynamic Reports</a>
+	   <span *ngIf="states.isSignedIn">
+	   <ul class="usa-sidenav-sub_list" *ngIf="isCurrentSection('overview')">
+            <li><a #ScheduledReports [ngClass]="getSubSectionClass('ScheduledReports')" (click)="changeSubSection('ScheduledReports',ScheduledReports)" [routerLink]="['/reports/scheduled']">Scheduled Reports</a></li>
+           </ul>
+	   </span>
+	</li>
 	<li><a [ngClass]="getSectionClass('static')" (click)="changeSection('static')" [routerLink]="['/reports/static']">Static Reports</a></li>
-	<li><a [ngClass]="getSectionClass('adhoc')" (click)="changeSection('adhoc')" [routerLink]="['/reports/adhoc']">Ad-hoc Reports</a></li>
+	<li><a [ngClass]="getSectionClass('adhoc')" (click)="changeSection('adhoc')">Ad-hoc Reports</a>
+	  <ul class="usa-sidenav-sub_list" *ngIf="isCurrentSection('adhoc')">
+            <li><a #savedAdhocReports [ngClass]="getSubSectionClass('savedAdhocReports')" (click)="changeSubSection('savedAdhocReports',savedAdhocReports)" [routerLink]="['/reports/adhoc']">My Reports</a></li>
+            <li><a #newAdhocReport [ngClass]="getSubSectionClass('newAdhocReport')" (click)="changeSubSection('newAdhocReport',newAdhocReport)" [routerLink]="['/reports/adhoc']"><button type="button" class="usa-button-outline">New Report</button></a></li>
+          </ul>
+	</li>
 	<span *ngIf="states.isSignedIn">
         <li>
           <a [ngClass]="getSectionClass('favorites')" (click)="changeSection('favorites')" >Favorites</a>
