--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -3,7 +3,6 @@
 // Vendor main
 @import '~font-awesome/scss/font-awesome';
 @import '~uswds/src/stylesheets/lib/bourbon';
-@import '~uswds/src/stylesheets/lib/neat';
 
 // Internal variable should be declared before uswds variable to take higher precendence
 @import 'variables';
@@ -11,7 +10,6 @@
 @import 'margin-padding';
 @import 'global';
 @import 'typography';
-@import 'grid-offsets';
 
 @import '~uswds/src/stylesheets/uswds';
 
@@ -23,7 +21,6 @@
 @import 'components/authentication';
 @import 'components/footer';
 @import 'components/button';
-@import 'components/collapsible';
 @import 'components/pagination';
 @import 'components/header';
 @import 'components/header-links';
@@ -39,12 +36,7 @@
 @import 'components/tabs';
 @import 'components/modal';
 @import 'components/alphabet-selector';
-@import 'components/history';
-@import 'components/toggle-switch';
-@import 'components/feedback-form';
-@import 'components/well';
 
-@import 'pages/awards';
 @import 'pages/entity-object-view';
 @import 'pages/exclusion';
 @import 'pages/assistance-listing';
@@ -54,17 +46,13 @@
 @import 'pages/organization';
 @import 'pages/search';
 @import 'pages/reference-library';
+@import 'pages/reports';
 @import 'pages/alerts';
 @import 'pages/new-to-sam';
 @import 'pages/help-accounts';
 @import 'pages/help-roadmap';
 @import 'pages/users-directory';
 @import 'pages/ui-kit-demo';
-@import 'pages/access';
-@import 'pages/grant-access';
-@import 'pages/public-profile';
-@import 'pages/wage-determination';
-@import 'pages/assistance-listing-operations';
 
 html, body{
   height: 100%;
@@ -123,6 +111,8 @@ h2{
   text-align: right;
 }
 
+
+
 .sidenav-logo {
   width:160px;
   height: 160px;
@@ -139,16 +129,5 @@ h2{
   aside.usa-width-one-fourth{
     margin-right: 0;
     width: 100%;
-  }
-}
-
-.search-layout{
-  .showing-results-meta{
-    margin-top:3rem!important;
-  }
-  samselect{
-    label{
-      margin-top:0;
-    }
   }
 }
