- Added consecutive character rule to custom validators for password

--- a/src/app/authentication/forgot/forgot-main.component.html
+++ b/src/app/authentication/forgot/forgot-main.component.html
@@ -24,7 +24,8 @@
           </div>
 
           <div *ngIf="states.reset">
-            <sam-password [password]="password"></sam-password>
+            <sam-password [password]="password"
+                          [phrases]="[user.firstName, user.initials, user.lastName, user.email]"></sam-password>
           </div>
 
           <div class="usa-button-controls">
